werid